# tarea2-ssoo

./: README.md
ProgramaSecuencial/: CMakeLists.txt  README.md  main.cpp
paralela-api/: CMakeLists.txt  README.md  main.cpp
paralela-thread/: CMakeLists.txt  README.md  main.cpp
