cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 14)
project( paralela-api )
find_package( OpenCV REQUIRED )
find_package( OpenMP REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( paralela-api main.cpp )
target_link_libraries( paralela-api ${OpenCV_LIBS} )
target_link_libraries( paralela-api ${OpenCV_LIBS} OpenMP::OpenMP_CXX )
